fixing form on mobile

--- a/styles.scss
+++ b/styles.scss
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    border: red 1px solid ;
 }
 
 article,
@@ -356,6 +357,7 @@ section {
             font-weight: 800;
         }
     }
+    
 }
 
 .project {
@@ -589,10 +591,38 @@ margin-top: 5%;
     .aboutMe .skillIcons {
         display: flex;
         flex-wrap: wrap;
-        width: 33%;
+        width: 100%;
         justify-content: space-between;
-        margin-left: 33%;
+        margin: 0px;
+        column-count: 3;
     }
+div.skillIcons:nth-child(6) {
+    margin-left: 0px;
+}
+.iconTitle {
+    width: 33%;
+    p {
+          font-size: 0.85rem;
+    }
+}
+    form {
+        display: flex;
+        flex-direction: column;
+        border: none;
+        width: 40%;
+
+        input {
+            border: none;
+            padding: 7px;
+            margin: 5px;
+        }
+
+        .nameEmail {
+            display: flex;
+            justify-content: space-between;
+
+        }
+
 }
 
 @media (max-width:797px) {
@@ -617,12 +647,20 @@ margin-top: 5%;
 @media (max-width:556px) {
     .heroImage {
 
-        padding-top: 50%;
+        padding-top: 25%;
     }
 
     h1 {
-        font-size: 3.5rem;
+        font-size: 3rem;
     }
+
+    h2 {
+        font-size: 2.5rem;
+    }
+        // .aboutMe .skillIcons {
+           
+        // }
+
 }
 
 @media (max-width:435px) {
@@ -632,10 +670,9 @@ margin-top: 5%;
 }
 
 @media (max-width:367px) {
-    .aboutMe .skillIcons {
-        width: 56%;
-        margin-left: 23%;
-    }
+    // .aboutMe .skillIcons {
+        
+    // }
 
     .project p {
         font-size: 1rem;
@@ -643,9 +680,11 @@ margin-top: 5%;
 }
 
 @media (max-width:320px) {
-    .aboutMe .skillIcons {
-        width: 61%;
-        margin-left: 19%;
-        padding: 13% 0;
-    }
+    // .aboutMe .skillIcons {
+    //             border: 1px red;
+
+    //     width: 61%;
+    //     margin-left: 19%;
+    //     padding: 13% 0;
+    // }
 }
